--- a/index.html
+++ b/index.html
@@ -6,5 +6,27 @@
     <title>Landing Page</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="header">
+      <nav>
+        <div class="logo">Header Logo</div>
+        <ul>
+          <li><a href="">header link one</a></li>
+          <li><a href="">header link two</a></li>
+          <li><a href="">header link three</a></li>
+        </ul>
+      </nav>
+      <div class="hero-container">
+        <div class="hero-info">
+          <div class="hero-main">This website is awesome</div>
+          <p class="hero-secondary">
+            This website has some subtext that goes here under the main title.
+            It's a smaller font and the color is lower contrast
+          </p>
+          <button>Sign up</button>
+        </div>
+        <div class="img-placeholder">this is a placeholder for an image</div>
+      </div>
+    </div>
+  </body>
 </html>
