--- a/index.html
+++ b/index.html
@@ -28,5 +28,34 @@
         <div class="img-placeholder">this is a placeholder for an image</div>
       </div>
     </div>
+    <div class="info-section">
+      <div class="info-header">Some random information.</div>
+      <div class="boxes">
+        <div class="box-container">
+          <div class="box"></div>
+          <p class="info-text">
+            this is some subtext under an illustration or image
+          </p>
+        </div>
+        <div class="box-container">
+          <div class="box"></div>
+          <p class="info-text">
+            this is some subtext under an illustration or image
+          </p>
+        </div>
+        <div class="box-container">
+          <div class="box"></div>
+          <p class="info-text">
+            this is some subtext under an illustration or image
+          </p>
+        </div>
+        <div class="box-container">
+          <div class="box"></div>
+          <p class="info-text">
+            this is some subtext under an illustration or image
+          </p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
