feat: enhance header and add call to action section
- Updated header button with a new class for styling
- Added a new call to action section with title, subtext, and button
- Applied background color to the info and call to action sections

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             This website has some subtext that goes here under the main title.
             It's a smaller font and the color is lower contrast
           </p>
-          <button>Sign up</button>
+          <button class="header-button">Sign up</button>
         </div>
         <div class="img-placeholder">this is a placeholder for an image</div>
       </div>
@@ -64,6 +64,17 @@
         All I know is that it looks nice.
       </p>
       <p class="quotee">-Thor, God of Thunder</p>
+    </div>
+    <div class="cta-section">
+      <div class="cta-box">
+        <div class="cta-texts">
+          <p class="cta-title">Call to action! It's time!</p>
+          <p class="cta-subtext">
+            Sign up for our product by clicking that button right over there!
+          </p>
+        </div>
+        <button class="cta-button">Sign up</button>
+      </div>
     </div>
   </body>
 </html>
