--- a/index.html
+++ b/index.html
@@ -76,5 +76,8 @@
         <button class="cta-button">Sign up</button>
       </div>
     </div>
+    <div class="footer">
+      <p>Copyright © The Odin Project 2021</p>
+    </div>
   </body>
 </html>
